# FastLEDControl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version_config.h.in
scripts/: install_dependencies.sh
src/: led_control.hpp
src/dashboard/: main.cpp
src/network/: circular_buffer.cpp  circular_buffer.hpp  client.cpp  client.hpp
src/utils/: utils.cpp  utils.hpp
